1、列表页样式调整 2、修改localStorage键值名称 3、添加列表页当前页数 4、优化列表页上一页、下一页事件 5、修复初始化集市页面后，因没有保存记事的objId而出现不断新增的问题

--- a/views/note/note-list.html
+++ b/views/note/note-list.html
@@ -3,16 +3,24 @@
     <style type="text/css">
         .bs-callout {
             max-height: 280px;
+            overflow: hidden;
+        }
+
+        .pagination {
+            margin-bottom: 0;
         }
     </style>
     <div class="main-flex overflow">
         <div class="bs-callout bs-callout-info" ng-repeat="note in data.noteList">
             <ul class="reset-ul">
                 <li>
-                    <b>{{ $index + 1 }}、{{note.title}} </b>&nbsp;&nbsp;
-                    更新于：{{note.updatedAt}}&nbsp;&nbsp;
-                    <a href="#/editor/{{note.objectId}}"><i class="fa fa-share" aria-hidden="true"></i></a>&nbsp;&nbsp;
-                    <a href="javascript:void(0);" ng-click="removeNoteConfirm(note.objectId)"><i class="fa fa-times" aria-hidden="true"></i></a>
+                    <b>{{ $index + 1 }}、<i class="fa fa-calendar" aria-hidden="true"></i> {{note.updatedAt}}</b>&nbsp;&nbsp;
+                    <a href="#/editor/{{note.objectId}}" title="查看">
+                        <i class="fa fa-share" aria-hidden="true"></i>
+                    </a>&nbsp;&nbsp;
+                    <a href="javascript:void(0);" title="删除" ng-click="removeNoteConfirm(note.objectId)">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </a>
                 </li>
                 <li>
                     <hr/>
@@ -22,6 +30,9 @@
                 </li>
             </ul>
         </div>
+        <div ng-if="!data.noteList || data.noteList.length<1">
+            <h3>糟糕，没有找到想要的数据！</h3>
+        </div>
 
         <ul class="pagination ">
             <li>
@@ -29,9 +40,9 @@
                     <span aria-hidden="true">&laquo;&nbsp;往前</span>
                 </a>
             </li>
-            <!--<li>-->
-                <!--<a href="javascript:void(0);">当前第{{page}}页</a>-->
-            <!--</li>-->
+            <li>
+                <a href="javascript:void(0);">当前第{{data.currentPage}}页</a>
+            </li>
             <li>
                 <a href="javascript:void(0);" ng-click="turnPageSearch(true)" aria-label="Next">
                     <span aria-hidden="true">往后&nbsp;&raquo;</span>
