--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,7 @@ body {
 
 .main {
     min-height: 180px;
+    padding: 50px 0 0 0;
 }
 
 .sideNav {
@@ -18,6 +19,7 @@ body {
     /*overflow-y: auto;*/
     overflow-y: scroll;
     display: none;
+    z-index: 9;
 }
 
 .sideNav .fa {
@@ -44,11 +46,6 @@ body {
 
 .header a:hover {
     color: #f0f0f0;
-}
-
-.main {
-    padding: 50px 0 0 0;
-    overflow-x: hidden;
 }
 
 .reset-ul {
@@ -223,7 +220,7 @@ ul a:hover {
 
 .bs-callout {
     padding: 20px;
-    margin: 20px 0;
+    margin: 0 0 20px 0;
     border: 1px solid #eeeeee;
     border-left-width: 5px;
     border-radius: 3px;
