--- a/views/partials/editor.html
+++ b/views/partials/editor.html
@@ -81,7 +81,7 @@
                     <i class="fa fa-th-list" aria-hidden="true"></i>
                 </a>
             </div>
-            <div class="tools-item" title="share this to friends." ng-click="submitTransEdit()">
+            <div class="tools-item" title="save or share this to friends." ng-click="submitTransEdit()">
                 <i class="fa fa-paper-plane" aria-hidden="true"></i>
             </div>
         </div>
