--- a/views/user/login.html
+++ b/views/user/login.html
@@ -43,22 +43,20 @@
         </div>
         <div class="bs-callout bs-callout-warning">
             <ul class="reset-ul">
-                <li>暂未完成头像修改</li>
+                <li>暂未完成头像修改功能</li>
             </ul>
         </div>
         <div class="bs-callout bs-callout-warning">
             <ul class="reset-ul">
-                <li>暂未完成注册邮件绑定</li>
+                <li>暂未完成注册邮件绑定功能</li>
             </ul>
         </div>
         <div class="bs-callout bs-callout-info">
             <ul class="reset-ul">
                 <li>
-                    <a href="https://notepad.lixiang4u.me/Notepad.tgz">
-                        <i class="fa fa-cloud-download" aria-hidden="true"></i>
-                        Notepad
-                    </a>
-                    项目git目前为私有，文件已打包
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                    项目地址
+                    <a href="https://github.com/lixiang4u/Notepad">https://github.com/lixiang4u/Notepad</a>
 
                 </li>
             </ul>
